solc_ossfuzz_seed_corpus/test_sol/test_900ce968961d72d7bba14831335472b5db2cd9f22df50a2d15d31366cadd3310_60d9226a224670a7df1bc637eb043fe1e408af27_sol.sol
==== Source:  ====

==== Source: su0.sol ====
contract C0 {
  bool immutable  s0;
  bool  public s1 = true;
  constructor(bool i0)   {
    s0 = (false != ((true ? uint72(1169582229460229043722) : uint72(4722366482869645213695)) != uint72(4722366482869645213695)));
    {
      bool  l0 = s1;
      bool  l1 = l0;
      assert(l1 == s1);
      bool  l2 = s1;
      bool  l3 = l2;
      assert(l3 == s1);
      bool  l4 = s1;
      bool  l5 = l4;
      assert(l5 == s1);
      unchecked {
        revert(string.concat(string("93b0ed76833d270704bf485184e4e0cffa22e810ae769e79f7ffffffffffffffffffffffffffffffffffffffffffffffff")));
      }
    }
  }
  error er0();
  function f0(bool i0) external virtual   returns(bytes31[] memory o0)
  {
    bool  l0 = s1;
    bool  l1 = l0;
    assert(l1 == s1);
    bool  l2 = s0;
    bool  l3 = l2;
    assert(l3 == s0);
    revert er0();
  }
}
library L0 {
  event ev0(uint184  ep0);
  function f1() internal    returns(bool[][] memory o0)
  {
    unchecked {
      function (bool[] memory) external   returns (int240, function () external   returns (bytes32), bytes27) l0;
      uint232 l1 = (uint232(4396275112791940646723308327357041898976549492377484039128824145263444) ^ (((uint152(0) - uint152(0)) - uint152(0)) + uint152(5708990770823839524233143877797980545530986495)));
      (o0[(true ? (((uint256(27610232450205723839241453693833602228630926610314827810780463364954457092000) * uint256(100718340774923630276239273730012235371944082386973557989776737309278982357684)) % uint256(45867174032718161599695341530582992095309448911648643503514695455274694564090)) * uint256(23557058109886080270207934548640121378969153132820152701907397079499746021615)) : uint256(115792089237316195423570985008687907853269984665640564039457584007913129639935))]) = (new bool[](5));
      function (function (bool, bytes14) external   returns (address payable, bytes18), bool, int64) internal   returns (uint192, bool, int88) l2;
      uint216 l3 = uint216(104907571095059174558723872354409163112832794688605986134156909503);
    }
    (o0[uint256(((((uint256(0) % uint256(115792089237316195423570985008687907853269984665640564039457584007913129639935)) & uint256(0)) - uint256(0)) / uint256(0)))], o0) = (new bool[](5), new bool[][](2));
  }
}
library L1 {
  event ev1(int136  ep0, bytes30  ep1, function () external   returns (bool, uint8)  ep2);
  function f2(int184 i0,bool i1,address[] memory i2) public   
  {
    revert(string("fff013"));
  }
}
pragma solidity >= 0.0.0;

==== Source: su1.sol ====
library L2 {
  function f3() private    returns(uint24 o0)
  {
  }
}
pragma solidity >= 0.0.0;
// ----
// Warning 5667: (su0.sol:76-83): Unused function parameter. Remove or comment out the variable name to silence this warning.
// Warning 5667: (su0.sol:629-636): Unused function parameter. Remove or comment out the variable name to silence this warning.
// Warning 5667: (su0.sol:665-684): Unused function parameter. Remove or comment out the variable name to silence this warning.
// Warning 2072: (su0.sol:956-1062): Unused local variable.
// Warning 2072: (su0.sol:1070-1080): Unused local variable.
// Warning 2072: (su0.sol:1766-1905): Unused local variable.
// Warning 2072: (su0.sol:1913-1923): Unused local variable.
// Warning 5667: (su0.sol:2340-2349): Unused function parameter. Remove or comment out the variable name to silence this warning.
// Warning 5667: (su0.sol:2350-2357): Unused function parameter. Remove or comment out the variable name to silence this warning.
// Warning 5667: (su0.sol:2358-2377): Unused function parameter. Remove or comment out the variable name to silence this warning.
// Warning 2018: (su0.sol:876-2219): Function state mutability can be restricted to pure
// Warning 2018: (su0.sol:2328-2426): Function state mutability can be restricted to pure
// CodeGenerationError 1284: Some immutables were read from but never assigned, possibly because of optimization.
